# Beej

./: CMakeLists.txt  LICENSE  common.cpp  common.h
client/: CMakeLists.txt  main.cpp
client/include/: client.h
client/src/: client.cpp
server/: CMakeLists.txt  main.cpp
server/include/: interface.h
server/src/: interface.cpp
